# jpmc-task-1

./: client.py  pyproject.toml
